Fix alignment problem

--- a/src/views/global-styles/inner-html-content.scss
+++ b/src/views/global-styles/inner-html-content.scss
@@ -82,4 +82,16 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .align-left {
+    text-align: left;
+  }
+
+  .align-right {
+    text-align: right;
+  }
+
+  .align-center {
+    text-align: center;
+  }
 }
